parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    AND
    ARRAY
    AS
    ATSIGN
    CALLABLE
    CATCH
    CLASS
    CLONE
    CONST
    CONTINUE
    DECLARE
    DIE
    DISTINT
    DO
    DOLLARSIGN
    ELSEIF
    EMPTY
    ENDDECLARE
    ENDFOR
    ENDFOREACH
    ENDIF
    ENDSWITCH
    ENDWHILE
    EVAL
    EXIT
    EXTENDS
    FALSE
    FINAL
    FINALLY
    FN
    FOREACH
    GLOBAL
    GOTO
    HASHTAG
    IMPLEMENTS
    INCLUDE_ONCE
    INSTANCEOFINSTEADOFINTERFACE
    ISSET
    LIST
    MATCH
    MODULE
    NAMESPACE
    NEW
    NOT
    OR
    ORSYM
    PRINT
    PRIVATE
    PROTECTED
    PUBLIC
    QUESTIONMARK
    STATIC
    THROW
    TRAIT
    TRUE
    TRY
    UNSET
    USE
    VAR
    XOR
    XORSYM
    YIELD
    __HALT_COMPILER

Grammar

Rule 0     S' -> program
Rule 1     program -> OPENPHP declaration_list CLOSEPHP
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     declaration -> statement_list
Rule 7     declaration -> header_declaration
Rule 8     header_declaration -> INCLUDE QUOTATIONMARKSD ID DOT PHP QUOTATIONMARKSD SEMICOLON
Rule 9     header_declaration -> INCLUDE QUOTATIONMARKSS ID DOT PHP QUOTATIONMARKSS SEMICOLON
Rule 10    header_declaration -> REQUIRE QUOTATIONMARKSD ID DOT PHP QUOTATIONMARKSD SEMICOLON
Rule 11    header_declaration -> REQUIRE QUOTATIONMARKSS ID DOT PHP QUOTATIONMARKSS SEMICOLON
Rule 12    var_declaration -> var_declaration2 SEMICOLON
Rule 13    var_declaration2 -> VARI COMMA var_declaration2
Rule 14    var_declaration2 -> VARI
Rule 15    var_declaration2 -> VARI EQUAL QUOTATIONMARKSS text QUOTATIONMARKSS COMMA var_declaration2
Rule 16    var_declaration2 -> VARI EQUAL QUOTATIONMARKSS text QUOTATIONMARKSS
Rule 17    var_declaration2 -> VARI EQUAL VARI COMMA var_declaration2
Rule 18    var_declaration2 -> VARI EQUAL VARI
Rule 19    var_declaration2 -> VARI EQUAL NUMBER COMMA var_declaration2
Rule 20    var_declaration2 -> VARI EQUAL NUMBER
Rule 21    var_declaration2 -> VARI EQUAL var_declaration2
Rule 22    var_declaration2 -> VARI EQUAL AMPERSANT VARI COMMA var_declaration2
Rule 23    var_declaration2 -> VARI EQUAL AMPERSANT VARI
Rule 24    fun_declaration -> FUNCTION ID LPAREN params RPAREN fun_body
Rule 25    params -> var_declaration2
Rule 26    params -> empty
Rule 27    fun_body -> LBLOCK local_declarations statement_list RBLOCK
Rule 28    local_declarations -> local_declarations var_declaration
Rule 29    local_declarations -> empty
Rule 30    statement_list -> statement_list statement
Rule 31    statement_list -> empty
Rule 32    statement -> expression_statement
Rule 33    statement -> print_statement
Rule 34    statement -> selection_statement
Rule 35    statement -> iteration_statement
Rule 36    statement -> return_statement
Rule 37    expression_statement -> expression SEMICOLON
Rule 38    expression_statement -> SEMICOLON
Rule 39    print_statement -> ECHO print_statement2 SEMICOLON
Rule 40    print_statement -> ECHO QUOTATIONMARKSD print_statement2 QUOTATIONMARKSD
Rule 41    print_statement2 -> VARI COMMA print_statement2
Rule 42    print_statement2 -> VARI
Rule 43    print_statement2 -> text
Rule 44    print_statement2 -> NUMBER
Rule 45    text -> text ID
Rule 46    text -> ID
Rule 47    selection_statement -> IF LPAREN expression RPAREN statement_block
Rule 48    selection_statement -> IF LPAREN expression RPAREN statement_block ELSE statement_block
Rule 49    selection_statement -> SWITCH LPAREN VARI RPAREN LBLOCK statement RBLOCK
Rule 50    selection_statement -> CASE NUMBER COLON statement BREAK SEMICOLON
Rule 51    selection_statement -> DEFAULT COLON statement BREAK SEMICOLON
Rule 52    iteration_statement -> WHILE LPAREN expression RPAREN statement_block
Rule 53    iteration_statement -> FOR LPAREN var_declaration2 SEMICOLON expression SEMICOLON additive_expression RPAREN statement_block
Rule 54    statement_block -> LBLOCK statement_list RBLOCK
Rule 55    statement_block -> statement
Rule 56    return_statement -> RETURN SEMICOLON
Rule 57    return_statement -> RETURN expression SEMICOLON
Rule 58    return_statement -> RETURN ID LPAREN params RPAREN SEMICOLON
Rule 59    expression -> var EQUAL expression
Rule 60    expression -> simple_expression
Rule 61    var -> VARI
Rule 62    var -> VARI LBRACKET NUMBER RBRACKET
Rule 63    var -> VARI LBRACKET VARI RBRACKET
Rule 64    simple_expression -> additive_expression relop additive_expression
Rule 65    simple_expression -> additive_expression
Rule 66    additive_expression -> additive_expression addop term
Rule 67    additive_expression -> term
Rule 68    additive_expression -> term MINUSMINUS
Rule 69    additive_expression -> term PLUSPLUS
Rule 70    relop -> LESS
Rule 71    relop -> LESSEQUAL
Rule 72    relop -> GREATER
Rule 73    relop -> GREATEREQUAL
Rule 74    relop -> DISTINTEQUAL
Rule 75    relop -> EQUALEQUAL
Rule 76    addop -> PLUS
Rule 77    addop -> MINUS
Rule 78    mulop -> TIMES
Rule 79    mulop -> DIVIDE
Rule 80    term -> term mulop factor
Rule 81    term -> factor
Rule 82    factor -> LPAREN expression RPAREN
Rule 83    factor -> var
Rule 84    factor -> NUMBER
Rule 85    empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
AMPERSANT            : 22 23
AND                  : 
ARRAY                : 
AS                   : 
ATSIGN               : 
BREAK                : 50 51
CALLABLE             : 
CASE                 : 50
CATCH                : 
CLASS                : 
CLONE                : 
CLOSEPHP             : 1
COLON                : 50 51
COMMA                : 13 15 17 19 22 41
CONST                : 
CONTINUE             : 
DECLARE              : 
DEFAULT              : 51
DIE                  : 
DISTINT              : 
DISTINTEQUAL         : 74
DIVIDE               : 79
DO                   : 
DOLLARSIGN           : 
DOT                  : 8 9 10 11
ECHO                 : 39 40
ELSE                 : 48
ELSEIF               : 
EMPTY                : 
ENDDECLARE           : 
ENDFOR               : 
ENDFOREACH           : 
ENDIF                : 
ENDSWITCH            : 
ENDWHILE             : 
EQUAL                : 15 16 17 18 19 20 21 22 23 59
EQUALEQUAL           : 75
EVAL                 : 
EXIT                 : 
EXTENDS              : 
FALSE                : 
FINAL                : 
FINALLY              : 
FN                   : 
FOR                  : 53
FOREACH              : 
FUNCTION             : 24
GLOBAL               : 
GOTO                 : 
GREATER              : 72
GREATEREQUAL         : 73
HASHTAG              : 
ID                   : 8 9 10 11 24 45 46 58
IF                   : 47 48
IMPLEMENTS           : 
INCLUDE              : 8 9
INCLUDE_ONCE         : 
INSTANCEOFINSTEADOFINTERFACE : 
ISSET                : 
LBLOCK               : 27 49 54
LBRACKET             : 62 63
LESS                 : 70
LESSEQUAL            : 71
LIST                 : 
LPAREN               : 24 47 48 49 52 53 58 82
MATCH                : 
MINUS                : 77
MINUSMINUS           : 68
MODULE               : 
NAMESPACE            : 
NEW                  : 
NOT                  : 
NUMBER               : 19 20 44 50 62 84
OPENPHP              : 1
OR                   : 
ORSYM                : 
PHP                  : 8 9 10 11
PLUS                 : 76
PLUSPLUS             : 69
PRINT                : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
QUESTIONMARK         : 
QUOTATIONMARKSD      : 8 8 10 10 40 40
QUOTATIONMARKSS      : 9 9 11 11 15 15 16 16
RBLOCK               : 27 49 54
RBRACKET             : 62 63
REQUIRE              : 10 11
RETURN               : 56 57 58
RPAREN               : 24 47 48 49 52 53 58 82
SEMICOLON            : 8 9 10 11 12 37 38 39 50 51 53 53 56 57 58
STATIC               : 
SWITCH               : 49
THROW                : 
TIMES                : 78
TRAIT                : 
TRUE                 : 
TRY                  : 
UNSET                : 
USE                  : 
VAR                  : 
VARI                 : 13 14 15 16 17 17 18 18 19 20 21 22 22 23 23 41 42 49 61 62 63 63
WHILE                : 52
XOR                  : 
XORSYM               : 
YIELD                : 
__HALT_COMPILER      : 
error                : 

Nonterminals, with rules where they appear

additive_expression  : 53 64 64 65 66
addop                : 66
declaration          : 2 3
declaration_list     : 1 2
empty                : 26 29 31
expression           : 37 47 48 52 53 57 59 82
expression_statement : 32
factor               : 80 81
fun_body             : 24
fun_declaration      : 5
header_declaration   : 7
iteration_statement  : 35
local_declarations   : 27 28
mulop                : 80
params               : 24 58
print_statement      : 33
print_statement2     : 39 40 41
program              : 0
relop                : 64
return_statement     : 36
selection_statement  : 34
simple_expression    : 60
statement            : 30 49 50 51 55
statement_block      : 47 48 48 52 53
statement_list       : 6 27 30 54
term                 : 66 67 68 69 80
text                 : 15 16 43 45
var                  : 59 83
var_declaration      : 4 28
var_declaration2     : 12 13 15 17 19 21 22 25 53

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . OPENPHP declaration_list CLOSEPHP

    OPENPHP         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> OPENPHP . declaration_list CLOSEPHP
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . statement_list
    (7) declaration -> . header_declaration
    (12) var_declaration -> . var_declaration2 SEMICOLON
    (24) fun_declaration -> . FUNCTION ID LPAREN params RPAREN fun_body
    (30) statement_list -> . statement_list statement
    (31) statement_list -> . empty
    (8) header_declaration -> . INCLUDE QUOTATIONMARKSD ID DOT PHP QUOTATIONMARKSD SEMICOLON
    (9) header_declaration -> . INCLUDE QUOTATIONMARKSS ID DOT PHP QUOTATIONMARKSS SEMICOLON
    (10) header_declaration -> . REQUIRE QUOTATIONMARKSD ID DOT PHP QUOTATIONMARKSD SEMICOLON
    (11) header_declaration -> . REQUIRE QUOTATIONMARKSS ID DOT PHP QUOTATIONMARKSS SEMICOLON
    (13) var_declaration2 -> . VARI COMMA var_declaration2
    (14) var_declaration2 -> . VARI
    (15) var_declaration2 -> . VARI EQUAL QUOTATIONMARKSS text QUOTATIONMARKSS COMMA var_declaration2
    (16) var_declaration2 -> . VARI EQUAL QUOTATIONMARKSS text QUOTATIONMARKSS
    (17) var_declaration2 -> . VARI EQUAL VARI COMMA var_declaration2
    (18) var_declaration2 -> . VARI EQUAL VARI
    (19) var_declaration2 -> . VARI EQUAL NUMBER COMMA var_declaration2
    (20) var_declaration2 -> . VARI EQUAL NUMBER
    (21) var_declaration2 -> . VARI EQUAL var_declaration2
    (22) var_declaration2 -> . VARI EQUAL AMPERSANT VARI COMMA var_declaration2
    (23) var_declaration2 -> . VARI EQUAL AMPERSANT VARI
    (85) empty -> .

  ! shift/reduce conflict for VARI resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
    FUNCTION        shift and go to state 10
    INCLUDE         shift and go to state 12
    REQUIRE         shift and go to state 13
    VARI            shift and go to state 14
    SEMICOLON       reduce using rule 85 (empty -> .)
    ECHO            reduce using rule 85 (empty -> .)
    IF              reduce using rule 85 (empty -> .)
    SWITCH          reduce using rule 85 (empty -> .)
    CASE            reduce using rule 85 (empty -> .)
    DEFAULT         reduce using rule 85 (empty -> .)
    WHILE           reduce using rule 85 (empty -> .)
    FOR             reduce using rule 85 (empty -> .)
    RETURN          reduce using rule 85 (empty -> .)
    LPAREN          reduce using rule 85 (empty -> .)
    NUMBER          reduce using rule 85 (empty -> .)
    CLOSEPHP        reduce using rule 85 (empty -> .)

  ! VARI            [ reduce using rule 85 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 85 (empty -> .) ]
  ! INCLUDE         [ reduce using rule 85 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 85 (empty -> .) ]

    declaration_list               shift and go to state 3
    declaration                    shift and go to state 4
    var_declaration                shift and go to state 5
    fun_declaration                shift and go to state 6
    statement_list                 shift and go to state 7
    header_declaration             shift and go to state 8
    var_declaration2               shift and go to state 9
    empty                          shift and go to state 11

state 3

    (1) program -> OPENPHP declaration_list . CLOSEPHP
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) declaration -> . statement_list
    (7) declaration -> . header_declaration
    (12) var_declaration -> . var_declaration2 SEMICOLON
    (24) fun_declaration -> . FUNCTION ID LPAREN params RPAREN fun_body
    (30) statement_list -> . statement_list statement
    (31) statement_list -> . empty
    (8) header_declaration -> . INCLUDE QUOTATIONMARKSD ID DOT PHP QUOTATIONMARKSD SEMICOLON
    (9) header_declaration -> . INCLUDE QUOTATIONMARKSS ID DOT PHP QUOTATIONMARKSS SEMICOLON
    (10) header_declaration -> . REQUIRE QUOTATIONMARKSD ID DOT PHP QUOTATIONMARKSD SEMICOLON
    (11) header_declaration -> . REQUIRE QUOTATIONMARKSS ID DOT PHP QUOTATIONMARKSS SEMICOLON
    (13) var_declaration2 -> . VARI COMMA var_declaration2
    (14) var_declaration2 -> . VARI
    (15) var_declaration2 -> . VARI EQUAL QUOTATIONMARKSS text QUOTATIONMARKSS COMMA var_declaration2
    (16) var_declaration2 -> . VARI EQUAL QUOTATIONMARKSS text QUOTATIONMARKSS
    (17) var_declaration2 -> . VARI EQUAL VARI COMMA var_declaration2
    (18) var_declaration2 -> . VARI EQUAL VARI
    (19) var_declaration2 -> . VARI EQUAL NUMBER COMMA var_declaration2
    (20) var_declaration2 -> . VARI EQUAL NUMBER
    (21) var_declaration2 -> . VARI EQUAL var_declaration2
    (22) var_declaration2 -> . VARI EQUAL AMPERSANT VARI COMMA var_declaration2
    (23) var_declaration2 -> . VARI EQUAL AMPERSANT VARI
    (85) empty -> .

  ! shift/reduce conflict for VARI resolved as shift
  ! shift/reduce conflict for CLOSEPHP resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for INCLUDE resolved as shift
  ! shift/reduce conflict for REQUIRE resolved as shift
    CLOSEPHP        shift and go to state 15
    FUNCTION        shift and go to state 10
    INCLUDE         shift and go to state 12
    REQUIRE         shift and go to state 13
    VARI            shift and go to state 14
    SEMICOLON       reduce using rule 85 (empty -> .)
    ECHO            reduce using rule 85 (empty -> .)
    IF              reduce using rule 85 (empty -> .)
    SWITCH          reduce using rule 85 (empty -> .)
    CASE            reduce using rule 85 (empty -> .)
    DEFAULT         reduce using rule 85 (empty -> .)
    WHILE           reduce using rule 85 (empty -> .)
    FOR             reduce using rule 85 (empty -> .)
    RETURN          reduce using rule 85 (empty -> .)
    LPAREN          reduce using rule 85 (empty -> .)
    NUMBER          reduce using rule 85 (empty -> .)

  ! VARI            [ reduce using rule 85 (empty -> .) ]
  ! CLOSEPHP        [ reduce using rule 85 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 85 (empty -> .) ]
  ! INCLUDE         [ reduce using rule 85 (empty -> .) ]
  ! REQUIRE         [ reduce using rule 85 (empty -> .) ]

    declaration                    shift and go to state 16
    var_declaration                shift and go to state 5
    fun_declaration                shift and go to state 6
    statement_list                 shift and go to state 7
    header_declaration             shift and go to state 8
    var_declaration2               shift and go to state 9
    empty                          shift and go to state 11

state 4

    (3) declaration_list -> declaration .

    CLOSEPHP        reduce using rule 3 (declaration_list -> declaration .)
    FUNCTION        reduce using rule 3 (declaration_list -> declaration .)
    INCLUDE         reduce using rule 3 (declaration_list -> declaration .)
    REQUIRE         reduce using rule 3 (declaration_list -> declaration .)
    VARI            reduce using rule 3 (declaration_list -> declaration .)
    SEMICOLON       reduce using rule 3 (declaration_list -> declaration .)
    ECHO            reduce using rule 3 (declaration_list -> declaration .)
    IF              reduce using rule 3 (declaration_list -> declaration .)
    SWITCH          reduce using rule 3 (declaration_list -> declaration .)
    CASE            reduce using rule 3 (declaration_list -> declaration .)
    DEFAULT         reduce using rule 3 (declaration_list -> declaration .)
    WHILE           reduce using rule 3 (declaration_list -> declaration .)
    FOR             reduce using rule 3 (declaration_list -> declaration .)
    RETURN          reduce using rule 3 (declaration_list -> declaration .)
    LPAREN          reduce using rule 3 (declaration_list -> declaration .)
    NUMBER          reduce using rule 3 (declaration_list -> declaration .)


state 5

    (4) declaration -> var_declaration .

    CLOSEPHP        reduce using rule 4 (declaration -> var_declaration .)
    FUNCTION        reduce using rule 4 (declaration -> var_declaration .)
    INCLUDE         reduce using rule 4 (declaration -> var_declaration .)
    REQUIRE         reduce using rule 4 (declaration -> var_declaration .)
    VARI            reduce using rule 4 (declaration -> var_declaration .)
    SEMICOLON       reduce using rule 4 (declaration -> var_declaration .)
    ECHO            reduce using rule 4 (declaration -> var_declaration .)
    IF              reduce using rule 4 (declaration -> var_declaration .)
    SWITCH          reduce using rule 4 (declaration -> var_declaration .)
    CASE            reduce using rule 4 (declaration -> var_declaration .)
    DEFAULT         reduce using rule 4 (declaration -> var_declaration .)
    WHILE           reduce using rule 4 (declaration -> var_declaration .)
    FOR             reduce using rule 4 (declaration -> var_declaration .)
    RETURN          reduce using rule 4 (declaration -> var_declaration .)
    LPAREN          reduce using rule 4 (declaration -> var_declaration .)
    NUMBER          reduce using rule 4 (declaration -> var_declaration .)


state 6

    (5) declaration -> fun_declaration .

    CLOSEPHP        reduce using rule 5 (declaration -> fun_declaration .)
    FUNCTION        reduce using rule 5 (declaration -> fun_declaration .)
    INCLUDE         reduce using rule 5 (declaration -> fun_declaration .)
    REQUIRE         reduce using rule 5 (declaration -> fun_declaration .)
    VARI            reduce using rule 5 (declaration -> fun_declaration .)
    SEMICOLON       reduce using rule 5 (declaration -> fun_declaration .)
    ECHO            reduce using rule 5 (declaration -> fun_declaration .)
    IF              reduce using rule 5 (declaration -> fun_declaration .)
    SWITCH          reduce using rule 5 (declaration -> fun_declaration .)
    CASE            reduce using rule 5 (declaration -> fun_declaration .)
    DEFAULT         reduce using rule 5 (declaration -> fun_declaration .)
    WHILE           reduce using rule 5 (declaration -> fun_declaration .)
    FOR             reduce using rule 5 (declaration -> fun_declaration .)
    RETURN          reduce using rule 5 (declaration -> fun_declaration .)
    LPAREN          reduce using rule 5 (declaration -> fun_declaration .)
    NUMBER          reduce using rule 5 (declaration -> fun_declaration .)


state 7

    (6) declaration -> statement_list .
    (30) statement_list -> statement_list . statement
    (32) statement -> . expression_statement
    (33) statement -> . print_statement
    (34) statement -> . selection_statement
    (35) statement -> . iteration_statement
    (36) statement -> . return_statement
    (37) expression_statement -> . expression SEMICOLON
    (38) expression_statement -> . SEMICOLON
    (39) print_statement -> . ECHO print_statement2 SEMICOLON
    (40) print_statement -> . ECHO QUOTATIONMARKSD print_statement2 QUOTATIONMARKSD
    (47) selection_statement -> . IF LPAREN expression RPAREN statement_block
    (48) selection_statement -> . IF LPAREN expression RPAREN statement_block ELSE statement_block
    (49) selection_statement -> . SWITCH LPAREN VARI RPAREN LBLOCK statement RBLOCK
    (50) selection_statement -> . CASE NUMBER COLON statement BREAK SEMICOLON
    (51) selection_statement -> . DEFAULT COLON statement BREAK SEMICOLON
    (52) iteration_statement -> . WHILE LPAREN expression RPAREN statement_block
    (53) iteration_statement -> . FOR LPAREN var_declaration2 SEMICOLON expression SEMICOLON additive_expression RPAREN statement_block
    (56) return_statement -> . RETURN SEMICOLON
    (57) return_statement -> . RETURN expression SEMICOLON
    (58) return_statement -> . RETURN ID LPAREN params RPAREN SEMICOLON
    (59) expression -> . var EQUAL expression
    (60) expression -> . simple_expression
    (61) var -> . VARI
    (62) var -> . VARI LBRACKET NUMBER RBRACKET
    (63) var -> . VARI LBRACKET VARI RBRACKET
    (64) simple_expression -> . additive_expression relop additive_expression
    (65) simple_expression -> . additive_expression
    (66) additive_expression -> . additive_expression addop term
    (67) additive_expression -> . term
    (68) additive_expression -> . term MINUSMINUS
    (69) additive_expression -> . term PLUSPLUS
    (80) term -> . term mulop factor
    (81) term -> . factor
    (82) factor -> . LPAREN expression RPAREN
    (83) factor -> . var
    (84) factor -> . NUMBER

  ! shift/reduce conflict for SEMICOLON resolved as shift
  ! shift/reduce conflict for ECHO resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for CASE resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for VARI resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    CLOSEPHP        reduce using rule 6 (declaration -> statement_list .)
    FUNCTION        reduce using rule 6 (declaration -> statement_list .)
    INCLUDE         reduce using rule 6 (declaration -> statement_list .)
    REQUIRE         reduce using rule 6 (declaration -> statement_list .)
    SEMICOLON       shift and go to state 24
    ECHO            shift and go to state 25
    IF              shift and go to state 26
    SWITCH          shift and go to state 28
    CASE            shift and go to state 30
    DEFAULT         shift and go to state 32
    WHILE           shift and go to state 33
    FOR             shift and go to state 34
    RETURN          shift and go to state 36
    VARI            shift and go to state 29
    LPAREN          shift and go to state 27
    NUMBER          shift and go to state 31

  ! VARI            [ reduce using rule 6 (declaration -> statement_list .) ]
  ! SEMICOLON       [ reduce using rule 6 (declaration -> statement_list .) ]
  ! ECHO            [ reduce using rule 6 (declaration -> statement_list .) ]
  ! IF              [ reduce using rule 6 (declaration -> statement_list .) ]
  ! SWITCH          [ reduce using rule 6 (declaration -> statement_list .) ]
  ! CASE            [ reduce using rule 6 (declaration -> statement_list .) ]
  ! DEFAULT         [ reduce using rule 6 (declaration -> statement_list .) ]
  ! WHILE           [ reduce using rule 6 (declaration -> statement_list .) ]
  ! FOR             [ reduce using rule 6 (declaration -> statement_list .) ]
  ! RETURN          [ reduce using rule 6 (declaration -> statement_list .) ]
  ! LPAREN          [ reduce using rule 6 (declaration -> statement_list .) ]
  ! NUMBER          [ reduce using rule 6 (declaration -> statement_list .) ]

    statement                      shift and go to state 17
    expression_statement           shift and go to state 18
    print_statement                shift and go to state 19
    selection_statement            shift and go to state 20
    iteration_statement            shift and go to state 21
    return_statement               shift and go to state 22
    expression                     shift and go to state 23
    additive_expression            shift and go to state 35
    var                            shift and go to state 37
    simple_expression              shift and go to state 38
    term                           shift and go to state 39
    factor                         shift and go to state 40

state 8

    (7) declaration -> header_declaration .

    CLOSEPHP        reduce using rule 7 (declaration -> header_declaration .)
    FUNCTION        reduce using rule 7 (declaration -> header_declaration .)
    INCLUDE         reduce using rule 7 (declaration -> header_declaration .)
    REQUIRE         reduce using rule 7 (declaration -> header_declaration .)
    VARI            reduce using rule 7 (declaration -> header_declaration .)
    SEMICOLON       reduce using rule 7 (declaration -> header_declaration .)
    ECHO            reduce using rule 7 (declaration -> header_declaration .)
    IF              reduce using rule 7 (declaration -> header_declaration .)
    SWITCH          reduce using rule 7 (declaration -> header_declaration .)
    CASE            reduce using rule 7 (declaration -> header_declaration .)
    DEFAULT         reduce using rule 7 (declaration -> header_declaration .)
    WHILE           reduce using rule 7 (declaration -> header_declaration .)
    FOR             reduce using rule 7 (declaration -> header_declaration .)
    RETURN          reduce using rule 7 (declaration -> header_declaration .)
    LPAREN          reduce using rule 7 (declaration -> header_declaration .)
    NUMBER          reduce using rule 7 (declaration -> header_declaration .)


state 9

    (12) var_declaration -> var_declaration2 . SEMICOLON

    SEMICOLON       shift and go to state 41


state 10

    (24) fun_declaration -> FUNCTION . ID LPAREN params RPAREN fun_body

    ID              shift and go to state 42


state 11

    (31) statement_list -> empty .
